syntax = "proto3";
package quicksilver.airdrop.v1;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/msg/v1/msg.proto";
import "quicksilver/airdrop/v1/airdrop.proto";

option go_package = "github.com/ingenuity-build/quicksilver/x/airdrop/types";

message RegisterZoneDropProposal {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.goproto_stringer) = false;

  string title = 1;
  string description = 2;

  ZoneDrop zone_drop = 3 [ (gogoproto.moretags) = "yaml:\"zone_drop\"" ];
  bytes claim_records = 4 [ (gogoproto.moretags) = "yaml:\"claim_records\"" ];
}

message MsgRegisterZoneDrop {
  option (cosmos.msg.v1.signer) = "authority";
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  string authority = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  ZoneDrop zone_drop = 2 [ (gogoproto.moretags) = "yaml:\"zone_drop\"" ];
  bytes claim_records = 3 [ (gogoproto.moretags) = "yaml:\"claim_records\"" ];
}

// MsgRegisterZoneDropResponse defines the MsgRegisterZoneDrop response type.
message MsgRegisterZoneDropResponse {}